--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
-    "rxjs": "~7.5.0",
+    "bootstrap": "^5.2.1",
+    "rxjs": "^7.5.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
